[project]
name = "stsmfa-cli"
version = "1.7.0"
description = "A small CLI to help with creating AWS profile for MFA protected sessions"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Bruno Alla", email = "alla.brunoo@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "boto3>=1.26,<2",
  "rich>=10",
  "typer>=0.15,<1",
]
urls."Bug Tracker" = "https://github.com/browniebroke/stsmfa-cli/issues"
urls.Changelog = "https://github.com/browniebroke/stsmfa-cli/blob/main/CHANGELOG.md"
urls.repository = "https://github.com/browniebroke/stsmfa-cli"
scripts.awsmfa = "stsmfa.cli:app"
scripts.stsmfa = "stsmfa.cli:app"

[dependency-groups]
dev = [
  "pyfakefs>=6,<7",
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
  "pytest-mock>=3.10,<4",
]

[tool.ruff]
line-length = 88
lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "E",   # pycodestyle
  "F",   # pyflake
  "I",   # isort
  "RUF", # ruff specific
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D401", # First line of docstring should be in imperative mood
]
lint.per-file-ignores."setup.py" = [ "D100" ]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
]
lint.isort.known-first-party = [ "stsmfa", "tests" ]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest]
ini_options.addopts = "-v -Wdefault --cov=stsmfa --cov-report=term-missing:skip-covered"
ini_options.pythonpath = [ "src" ]

[tool.coverage]
report.exclude_lines = [
  "pragma: no cover",
  "@overload",
  "if TYPE_CHECKING",
  "raise NotImplementedError",
  'if __name__ == "__main__":',
]
run.branch = true
run.omit = [
  "src/stsmfa/__maIn__.py",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
  "setup.py",
]
overrides = [ { module = "tests.*", allow_untyped_defs = true } ]

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [
  "src/stsmfa/__init__.py:__version__",
]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""
branches.main.match = "main"
branches.noop.match = "(?!main$)"
branches.noop.prerelease = true
changelog.exclude_commit_patterns = [
  "chore.*",
  "ci.*",
  "Merge pull request .*",
]
changelog.environment.keep_trailing_newline = true
