[project]
name = "stsmfa-cli"
version = "1.7.1"
description = "A small CLI to help with creating AWS profile for MFA protected sessions"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Bruno Alla", email = "alla.brunoo@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "boto3>=1.26,<2",
  "rich>=10",
  "typer>=0.15,<1",
]
urls."Bug Tracker" = "https://github.com/browniebroke/stsmfa-cli/issues"
urls.Changelog = "https://github.com/browniebroke/stsmfa-cli/blob/main/CHANGELOG.md"
urls.repository = "https://github.com/browniebroke/stsmfa-cli"
scripts.awsmfa = "stsmfa.cli:app"
scripts.stsmfa = "stsmfa.cli:app"

[dependency-groups]
dev = [
  "pyfakefs>=6,<7",
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
  "pytest-mock>=3.10,<4",
  "ty==0.0.60",
]

[tool.ruff]
line-length = 88
lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "E",   # pycodestyle
  "F",   # pyflake
  "I",   # isort
  "RUF", # ruff specific
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D401", # First line of docstring should be in imperative mood
]
lint.per-file-ignores."setup.py" = [ "D100" ]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
]
lint.isort.known-first-party = [ "stsmfa", "tests" ]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.ty]
terminal.error-on-warning = true

[tool.pytest]
addopts = [ "-v", "-Wdefault", "--cov=stsmfa", "--cov-report=term-missing:skip-covered" ]
minversion = "9.0"
pythonpath = [ "src" ]

[tool.coverage]
run.branch = true
run.omit = [
  "src/stsmfa/__main__.py",
]
report.exclude_lines = [
  "@overload",
  'if __name__ == "__main__":',
  "if TYPE_CHECKING",
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.semantic_release]
version_variables = [
  "src/stsmfa/__init__.py:__version__",
]
version_toml = [ "pyproject.toml:project.version" ]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""
branches.main.match = "main"
branches.noop.match = "(?!main$)"
branches.noop.prerelease = true
changelog.environment.keep_trailing_newline = true
changelog.exclude_commit_patterns = [
  "chore.*",
  "ci.*",
  "Merge pull request .*",
]
